--- a/index.html
+++ b/index.html
@@ -2,8 +2,89 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+  <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,
+    HackerRank--3D Surface Area --Solution,
+HackerRank--A Very Big Sum--Solution,
+HackerRank--ACM ICPC Team---Solution,
+HackerRank--Alternating Characters--Solution,
+HackerRank--Anagram--Solution,
+HackerRank--Angry Professor--Solution,
+HackerRank--Append and Delete--Solution,
+HackerRank--Apple and Orange--Solution,
+HackerRank--Beautiful Days at the movies--Solution,
+HackerRank--Beautiful Triplets--Solution,
+HackerRank--Between Two Sets--Solution,
+HackerRank--Big Sorting--Solution,
+HackerRank--Bigger is Greater--Solution,
+HackerRank--Birthday Cake Candles--Solution,
+HackerRank--Birthday Chocolate--Solution,
+HackerRank--Bon Appetit--Solution,
+HackerRank--Breaking the Records--Solution,
+HackerRank--CamelCase--Solution,
+HackerRank--Cats and a Mouse--Solution,
+HackerRank--Cavity Map--Solution,
+HackerRank--Chocolate Feast--Solution,
+HackerRank--Circular Array Rotation--Solution,
+HackerRank--Climbing the Leaderboard--Solution,
+HackerRank--Compare The Triplets--Solution,
+HackerRank--Counting Valleys--Solution,
+HackerRank--Cut the Sticks--Solution,
+HackerRank--Day of the Programmer--Solution,
+HackerRank--Designer PDF Viewer--Solution,
+HackerRank--Diagonal Diffrence--Solution,
+HackerRank--Divisible Sum Pairs--Solution,
+HackerRank--Drawing Book--Solution,
+HackerRank--Electronics Shop--Solution,
+HackerRank--Encryption--Solution,
+HackerRank--Equalize the Array--Solution,
+HackerRank--Extra Long Factorials--Solution,
+HackerRank--Fair Rations--Solution,
+HackerRank--Find Digits--Solution,
+HackerRank--Flatland Space Stations--Solution,
+HackerRank--Forming a Magic Square--Solution,
+HackerRank--Grading Students--Solution,
+HackerRank--Halloween Sale--Solution,
+HackerRank--Happy Ladybugs--Solution,
+HackerRank--Insertion Sort-Part 1--Solution,
+HackerRank--Insertion Sort-Part 2--Solution,
+HackerRank--Intro to tutorial Challenges--Solution,
+HackerRank--Jumping on the Clouds-Revisited--Solution,
+HackerRank--Jumping on the Clouds--Solution,
+HackerRank--Kangaroo--Solution,
+HackerRank--Library Fine--Solution,
+HackerRank--Lisa's Workbook--Solution,
+HackerRank--Manasa and Stones--Solution,
+HackerRank--Migratory Birds--Solution,
+HackerRank--Mini-Max Sum--Solution,
+HackerRank--Minimum Distances--Solution,
+HackerRank--Modified Kaprekar Numbers--Solution,
+HackerRank--Non-Divisible Subset--Solution,
+HackerRank--Organizing Containers of Balls--Solution,
+HackerRank--Picking Numbers--Solution,
+HackerRank--Plus Minus--Solution,
+HackerRank--Queen's Attack 2--Solution,
+HackerRank--Repeated String--Solution,
+HackerRank--Running Time of Algorithm--Solution,
+HackerRank--Save the Prisoner!--Solution,
+HackerRank--Sequence Equation--Solution,
+HackerRank--Service Lane--Solution,
+HackerRank--Sherlock and Squares--Solution,
+HackerRank--Simple Array Sum--Solution,
+HackerRank--Sock Merchant--Solution,
+HackerRank--Solve Me First--Solution,
+HackerRank--Staircase--Solution,
+HackerRank--Strange Counter--Solution,
+HackerRank--Strong Password--Solution,
+HackerRank--Super Reduced String--Solution,
+HackerRank--Taum and B'day--Solution,
+HackerRank--The Grid Search--Solution,
+HackerRank--The Hurdle Race--Solution,
+HackerRank--The Time in Words--Solution,
+HackerRank--Time Conversion--Solution,
+HackerRank--Two Characters--Solution,
+HackerRank--Two Strings--Solution,
+HackerRank--Utopian Tree--Solution,
+HackerRank--Viral Advertising--Solution">    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="index.css">
     <title>hackerrank solutions</title>
