--- a/Anagram.html
+++ b/Anagram.html
@@ -4,7 +4,7 @@
     <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
-    <title>Alternating Characters </title>
+    <title>Anagram </title>
     <link rel="stylesheet" href="common.css">
   </head>
   <body>
