--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ HackerRank--Viral Advertising--Solution">    <meta name="description" content="H
   <body>
     <section>
       <h1><a href="index.html">SolutionsTeam.in</a></h1>
-      <p> Hackerrank Solutions in </p><p><br><a href="hackerrank.html">C</a><a href="hackerrank.html">C++</a><a href="hackerrank.html">Java</a><a href="hackerrank.html">Python</a></p>
+      <p> Hackerrank Solutions in <br><a href="hackerrank.html">C</a><a href="hackerrank.html">C++</a><a href="hackerrank.html">Java</a><a href="hackerrank.html">Python</a></p>
       <img src="solutions.jpeg" alt="Solutions">
     </section>
     <div style="background-image: url('background.jpeg');">
