--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ HackerRank--Viral Advertising--Solution">    <meta name="description" content="H
 
   <body>
     <section>
-      <h1><a href="index.html">SolutionsTeam.in</a></h1>
+      <h1>SolutionsTeam</h1>
       <p> Hackerrank Solutions in-<a href="hackerrank.html">C-</a><a href="hackerrank.html">C++-</a><a href="hackerrank.html">Java-</a><a href="hackerrank.html">Python</a></p>
       <img src="solutions.jpeg" alt="Solutions">
     </section>
