--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@ HackerRank--Utopian Tree--Solution,
 HackerRank--Viral Advertising--Solution">    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="index.css">
-    <title>hackerrank solutions</title>
+    <title>Hackerrank Solutions</title>
     <script data-ad-client="ca-pub-7673224820620063" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><script data-ad-client="ca-pub-7673224820620063" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
 
   <body>
     <section class="one">
       <div class="main-content-header">
-         <h1><span class="colorchange">Coursera Solutions<span></h1>
+         <h1><span class="colorchange">Hackerrank Solutions<span></h1>
          <h3>Perfect solution for a Problem</h3>
       </div>
       <div class="row">
