--- a/hackerrank.html
+++ b/hackerrank.html
@@ -85,7 +85,7 @@ HackerRank--Two Characters--Solution,
 HackerRank--Two Strings--Solution,
 HackerRank--Utopian Tree--Solution,
 HackerRank--Viral Advertising--Solution">    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
-    <link rel="stylesheet" href="hackkerank.css">
+    <link rel="stylesheet" href="hackerrank.css">
     <title>hackerranksolutions</title>
   </head>
   <body>
