--- a/hackerrank.html
+++ b/hackerrank.html
@@ -89,8 +89,12 @@ HackerRank--Viral Advertising--Solution">    <meta name="description" content="H
     <title>hackerranksolutions</title>
   </head>
   <body>
+      <div class="main-content-header">
+         <h1><span class="colorchange">Hackkerank Solutions<span></h1>
+         <h3>Perfect solution for a Problem</h3>
+      </div>
     <div class="list">
-      <h1>Hackerrank Solutions</h1>
+     
       <h3>This page is a good start for people who have started Hackerrank Practice.
         <br>I will be providing solutions for all the hackerrank problems right from the basic.
         <br>Solutions are available in C, C++, Java and Python.
