Update 3D Surface Area.html

--- a/3D Surface Area.html
+++ b/3D Surface Area.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
     <title>3D Surface Area</title>
