--- a/hackerrank.html
+++ b/hackerrank.html
@@ -43,6 +43,7 @@ HackerRank--Find Digits--Solution,
 HackerRank--Flatland Space Stations--Solution,
 HackerRank--Forming a Magic Square--Solution,
 HackerRank--Grading Students--Solution,
+HackerRank--Graduating--Solution,
 HackerRank--Halloween Sale--Solution,
 HackerRank--Happy Ladybugs--Solution,
 HackerRank--Insertion Sort-Part 1--Solution,
@@ -146,6 +147,7 @@ HackerRank--Viral Advertising--Solution">    <meta name="description" content="H
         <li><a href="Forming a Magic Square.html">HackerRank--Forming a Magic Square--Solution</a></li>
         <p>  </p>
         <li><a href="Grading Students.html">HackerRank--Grading Students--Solution</a></li>
+        <li><a href="Graduating.html">HackerRank--Graduating--Solution</a></li>
         <p>  </p>
         <li><a href="Halloween Sale.html">HackerRank--Halloween Sale--Solution</a></li>
         <li><a href="Happy Ladybugs.html">HackerRank--Happy Ladybugs--Solution</a></li>
