--- a/Graduating.html
+++ b/Graduating.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,Graduating">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,Graduating,In a university, your attendance determines whether you will be allowed to attend your graduation ceremony. You are not allowed to miss classes for two or more consecutive days. For example, if you miss a class today, then you must attend it tomorrow,Your graduation ceremony is on the last day of the academic year that is the Nth day.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
