--- a/Graduating.html
+++ b/Graduating.html
@@ -14,7 +14,7 @@
       <h2>Solution:</h2>
 
       <h3>C++:</h3>
-      <pre>
+      <code>
       #include <bits/stdc++.h>
 using namespace std;
 int main()
@@ -44,7 +44,7 @@ else
 	cout<<b-a<<"/"<<b;
 }
 }
-</pre>
+</code>
 <h2>For All Hackerrank Solutions<a href="hackerrank.html">Visit Homepage</a></h2>
   <h3>C:</h3>
 <pre>
