--- a/Graduating.html
+++ b/Graduating.html
@@ -15,18 +15,18 @@
 
       <h3>C++:</h3>
       <code>
-      #include <bits/stdc++.h>
+      #include &ltbits/stdc++.h&gt
 using namespace std;
 int main()
 {
 long long int N,c;
-cin>>N;
+cin&gt&gtN;
 long long int a = 2,p;
 long long int b = 3;
 if (N == 1)
 {
-	cout<<"2"<<endl;
-	cout<<"1/2";
+	cout&lt&lt"2"&lt&ltendl;
+	cout&lt&lt"1/2";
 }
 else if(N == 2)
 {
@@ -40,15 +40,15 @@ else
 	a = b;
 	b = c;
 	}
-	cout<<b<<endl;
-	cout<<b-a<<"/"<<b;
+	cout&lt&ltb&lt&ltendl;
+	cout&lt&ltb-a&lt&lt"/"&lt&ltb;
 }
 }
 </code>
 <h2>For All Hackerrank Solutions<a href="hackerrank.html">Visit Homepage</a></h2>
   <h3>C:</h3>
 <pre>
-#include <stdio.h>
+#include &ltstdio.h&lt
 int main()
 {
 long long int N,c;
