--- a/Graduating.html
+++ b/Graduating.html
@@ -14,7 +14,7 @@
       <h2>Solution:</h2>
 
       <h3>C++:</h3>
-      <code>
+      <pre>
       #include &ltbits/stdc++.h&gt
 using namespace std;
 int main()
@@ -44,7 +44,7 @@ else
 	cout&lt&ltb-a&lt&lt"/"&lt&ltb;
 }
 }
-</code>
+</pre>
 <h2>For All Hackerrank Solutions<a href="hackerrank.html">Visit Homepage</a></h2>
   <h3>C:</h3>
 <pre>
