--- a/Graduating.html
+++ b/Graduating.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
-    <title>3D Surface Area</title>
+    <title>Graduating</title>
     <link rel="stylesheet" href="common.css">
   </head>
   <body>
