--- a/Graduating.html
+++ b/Graduating.html
@@ -48,7 +48,7 @@ else
 <h2>For All Hackerrank Solutions<a href="hackerrank.html">Visit Homepage</a></h2>
   <h3>C:</h3>
 <pre>
-#include &ltstdio.h&lt
+#include &ltstdio.h&gt
 int main()
 {
 long long int N,c;
