--- a/3D Surface Area.html
+++ b/3D Surface Area.html
@@ -15,33 +15,33 @@
 
       <h3>C++:</h3>
       <pre>
-      #include<stdio.h>
+     #include&ltstdio.h&gt
 using namespace std;
 
 int T[200][200];
 
 int main() {
     int H, W;
-    while(cin >> H >> W) {
-        for(int i=0; i< H; i++)
-            for(int j=0; j< W; j++)
-                cin >> T[i][j];
+    while(cin &gt&gt H &gt&gt W) {
+        for(int i=0; i&lt H; i++)
+            for(int j=0; j&lt W; j++)
+                cin &gt&gt T[i][j];
 
         int total = 2*H*W;
-        for(int i=0; i< H; i++) {
+        for(int i=0; i&lt H; i++) {
             total += T[i][0];
-            for(int j=1; j< W; j++)
+            for(int j=1; j&lt W; j++)
                 total += abs(T[i][j] - T[i][j-1]);
             total += T[i][W-1];
         }
-        for(int i=0; i< W; i++) {
+        for(int i=0; i&lt W; i++) {
             total += T[0][i];
-            for(int j=1; j< H; j++)
+            for(int j=1; j&lt H; j++)
                 total += abs(T[j][i] - T[j-1][i]);
             total += T[H-1][i];
         }
 
-        cout << total << endl;
+        cout &lt&lt total &lt&lt endl;
     }
 }
 </pre>
@@ -63,14 +63,14 @@ public class Solution {
       int H = in.nextInt();
       int W = in.nextInt();
       int[][] A = new int[H][W];
-      for(int A_i = 0; A_i < H; A_i++){
-          for(int A_j = 0; A_j < W; A_j++){
+      for(int A_i = 0; A_i &lt H; A_i++){
+          for(int A_j = 0; A_j &lt W; A_j++){
               A[A_i][A_j] = in.nextInt();
           }
       }
       int result = 2 * H * W;
-      for (int i = 0; i < H; i++) {
-    for (int j = 0; j < W; j++) {
+      for (int i = 0; i &lt H; i++) {
+    for (int j = 0; j &lt W; j++) {
 
       result += (A[i][j]) * 4;
 
@@ -83,10 +83,7 @@ public class Solution {
     }
 
   }
-
       System.out.println(result);
-
-
       in.close();
   }
 }
