--- a/Organizing Containers of Balls.html
+++ b/Organizing Containers of Balls.html
@@ -21,7 +21,7 @@
      int t; cin >> t;
      while( t-- ) {
           int n; cin >> n;
-          ll row[n], col[n];
+          long row[n], col[n];
           int i, j;
           for(i=0; i< n; i++) row[i] = col[i] = 0;
           for(i=0; i< n; i++ ) {
