Update 3D Surface Area.html

--- a/3D Surface Area.html
+++ b/3D Surface Area.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,Madison is a little girl who is fond of toys. Her friend Mason works in a toy manufacturing factory . Mason has a 2D board  of size  with  rows and  columns. The board is divided into cells of size,with each cell indicated by its coordinate,The cell  has an integer  written on it,To create the toy Mason stacks  number of cubes of size,on the cell .Given the description of the board showing the values of,and that the price of the toy is equal to the 3d surface area find the price of the toy.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
