--- a/Alternating Characters.html
+++ b/Alternating Characters.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,You are given a string containing characters  and only, Your task is to change it into a string such that there are no matching adjacent characters, To do this, you are allowed to delete zero or more characters in the string,Your task is to find the minimum number of required deletions.">
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
     <title>Alternating Characters </title>
@@ -27,11 +27,6 @@
 
       <h3>C++:</h3>
 <pre>
-  #include <cmath>
-#include <cstdio>
-#include <vector>
-#include <iostream>
-#include <algorithm>
 using namespace std;
 
 int main() {
