--- a/hackerrank.html
+++ b/hackerrank.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
 <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,challenges,problem solving,basic,pactice,answes,C++,Java,C,Python,
     HackerRank--3D Surface Area --Solution,
 HackerRank--A Very Big Sum--Solution,
