Update A Very Big Sum.html

--- a/A Very Big Sum.html
+++ b/A Very Big Sum.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,In this challenge, you are required to calculate and ,print the sum of the elements in an array, keeping in mind that some of those integers may be quite large,Function DescriptionComplete the aVeryBigSum function in the editor below,It must return the sum of all array elements,aVeryBigSum has the following parameter(s):,int ar[n] ,an array of integers .">
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
