--- a/ACM ICPC Team.html
+++ b/ACM ICPC Team.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,There are a number of people who will be attending ACM-ICPC World Finals, Each of them may be well versed in a number of topics, Given a list of topics known by each attendee, presented as binary strings, determine the maximum number of topics a 2-person team can know, Each subject has a column in the binary string, and a '1' means the subject is known while '0' means it is not, Also determine the number of teams that know the maximum number of topics, Return an integer array with two elements, The first is the maximum number of topics known, and the second is the number of teams that know that number of topics.">
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
