--- a/Alternating Characters.html
+++ b/Alternating Characters.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,You are given a string containing characters  and only, Your task is to change it into a string such that there are no matching adjacent characters, To do this, you are allowed to delete zero or more characters in the string,Your task is to find the minimum number of required deletions.">
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <title>Alternating Characters </title>
     <link rel="stylesheet" href="common.css">
