--- a/CamelCase.html
+++ b/CamelCase.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
     <title>CamelCase</title>
