--- a/Staircase.html
+++ b/Staircase.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+	  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <title>Staircase </title>
     <link rel="stylesheet" href="common.css">
