--- a/Two Characters.html
+++ b/Two Characters.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Two Characters</title>
     <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <link rel="stylesheet" href="common.css">
   </head>
