--- a/Anagram.html
+++ b/Anagram.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,Two words are anagrams of one another if their letters can be rearranged to form the other word,Given a string, split it into two contiguous substrings of equal length, Determine the minimum number of characters to change to make the two substrings into anagrams of one another.Example,Break  into two parts, 'abc' and 'cde', Note that all letters have been used, the substrings are contiguous and their lengths are equal, Now you can change 'a' and 'b' in the first, substring to 'd' and 'e' to have 'dec' and 'cde' which are anagrams,Two changes were necessary.">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
