--- a/Angry Professor.html
+++ b/Angry Professor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,A Discrete Mathematics professor has a class of students, Frustrated with their lack of discipline, the professor decides to cancel class if fewer than some number of students are present when class starts., Arrival times go from on time () to arrived late ().,Given the arrival time of each student and a threshhold number of attendees, determine if the class is cancelled,Example,The first  students arrived on, The last  were late, The threshold is  students, so class will go on. Return YES,Note, Non-positive arrival times (), indicate the student arrived early or on time, positive arrival times () ,indicate the student arrived  minutes late">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
