Update Append and Delete.html

--- a/Append and Delete.html
+++ b/Append and Delete.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,You have two strings of lowercase English letters, You can perform two types of operations on the first string,Append a lowercase English letter to the end of the string,Delete the last character of the string, Performing this operation on an empty string results in an empty string,Given an integer, , and two strings,  and , determine whether or not you can convert  to  by performing exactly  of the above operations on , If it's possible, print Yes, Otherwise, print No,Example,To convert  to , we first delete all of the characters in  moves, Next we add each of the characters of  in order, On the  move, you will have the matching string, Return Yes,If there were more moves available, they could have been eliminated by performing multiple deletions on an empty string, If there were fewer than  moves, we would not have succeeded in creating the new string,">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
