--- a/Beautiful Triplets.html
+++ b/Beautiful Triplets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,Beautiful Triplets,cpp,hackerank solution,Given a sequence of integers , a triplet  is beautiful if,Given an increasing sequenc of integers and the value of , count the number of beautiful triplets in the sequence,Example,There are three beautiful triplets, by index: , To test the first triplet,  and ,Function Description,Complete the beautifulTriplets function in the editor below,beautifulTriplets has the following parameters,int d: the value to match,int arr[n]: the sequence, sorted ascending">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
