Update Between Two Sets.html

--- a/Between Two Sets.html
+++ b/Between Two Sets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,Between Two Sets,cpp,hackerrank solution, ,There will be two arrays of integers, ,  , Determine all integers that satisfy the following two conditions:,,,The elements of the first array are all factors of the integer being considered,The integer being considered is a factor of all elements of the second array,These numbers are referred to as being between the two arrays, Determine how many such numbers exist,Example,There are two numbers between the arrays:  and  , ,  and  for the first value,  and ,  for the second value, Return ">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
