--- a/Birthday Cake Candles.html
+++ b/Birthday Cake Candles.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,Birthday Cake Candles,Birthday,Cake,candkes,cpp,hackerrank,solutions,You are in charge of the cake for a child's birthday, You have decided the cake will have one candle for each year of their total age, They will only be able to blow out the tallest of the candles, Count how many candles are tallest,Example,The maximum height candles are  units high, ,There are  of them, so return, ,Function Description,Complete the function birthdayCakeCandles in the editor below,birthdayCakeCandles has the following parameter(s):,int candles[n]: the candle heights">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
