--- a/Birthday Chocolate.html
+++ b/Birthday Chocolate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Birthday Chocolate,Complete the birthday function in the editor below, It should return an integer denoting the number of ways Lily can divide the chocolate bar,birthday has the following parameter(s):,s: an array of integers, the numbers on each of the squares of chocolate,d: an integer, Ron's birth day,m: an integer, Ron's birth month">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
