--- a/Bon Appetit.html
+++ b/Bon Appetit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Bon Appetit,Anna and Brian are sharing a meal at a restaurant and they agree to split the bill equally, Brian wants to order something that Anna is allergic to though, and they agree that Anna won’t pay for that item, Brian gets the check and calculates Anna’s portion, You must determine if his calculation is correct">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
