--- a/Breaking the Records.html
+++ b/Breaking the Records.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,breaking the recordst,hackerrank solutions,Maria plays college basketball and wants to go pro, Each season she maintains a record of her play, She tabulates the number of times she breaks her season record for most points and least points in a game,the, Points scored in the first game establish her record for the season, ,and she begins counting from there, ,Example, ,Scores are in the same order as the games played, She tabulates her results as follows:">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
