--- a/CamelCase.html
+++ b/CamelCase.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,CamelCase,There is a sequence of words in CamelCase as a string of letters, , having the following properties,It is a concatenation of one or more words consisting of English letters,All letters in the first word are lowercase,For each of the subsequent words, the first letter is uppercase and rest of the letters are lowercase,Given , determine the number of words in ,Example,There are  words in the string: 'one', 'Two', 'Three'">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
