Update Cats and a Mouse.html

--- a/Cats and a Mouse.html
+++ b/Cats and a Mouse.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solution,Cats and a Mouse,Two cats and a mouse are at various positions on a line, You will be given their starting positions, Your task is to determine which cat will reach the mouse first, assuming the mouse does not move and the cats travel at equal speed, If the cats arrive at the same time, the mouse will be allowed to move and it will escape while they fight,You are given  queries in the form of , , and  representing the respective positions for cats  and , and for mouse , Complete the function  to return the appropriate answer to each query, which will be printed on a new line,If cat  catches the mouse first, print Cat A,If cat  catches the mouse first, print Cat B,If both cats reach the mouse at the same time, print Mouse C as the two cats fight and mouse escapes">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
     <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
     <meta charset="utf-8">
