--- a/Chocolate Feast.html
+++ b/Chocolate Feast.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank solution,Chocolate Feast,Little Bobby loves chocolate, He frequently goes to his favorite  store, Penny Auntie, to buy them, They are having a promotion at Penny Auntie, If Bobby saves enough wrappers, he can turn them in for a free chocolate, ,Example,He has  to spend, bars cost , and he can turn in  wrappers to receive another bar. Initially, he buys  bars and has  wrappers after eating them. He turns in  of them, leaving him with , for  more bars, ,After eating those two, he has  wrappers, turns in  leaving him with  wrapper and his new bar, Once he eats that one, he has  wrappers and turns them in for another bar, After eating that one, he only has  wrapper, and his feast ends. Overall, he has eaten  bars">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,Chocolate Feast,Little Bobby loves chocolate, He frequently goes to his favorite  store, Penny Auntie, to buy them, They are having a promotion at Penny Auntie, If Bobby saves enough wrappers, he can turn them in for a free chocolate">
     <meta charset="utf-8">
     <title>Chocolate Feast</title>
     <link rel="stylesheet" href="common.css">
