--- a/Circular Array Rotation.html
+++ b/Circular Array Rotation.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank solutions, ,John Watson knows of an operation called a right circular rotation on an array of integers, One rotation operation moves the last array element to the first position and shifts all remaining elements right one, To test Sherlock's abilities, Watson provides Sherlock with an array of integers, Sherlock is to perform the rotation operation a number of times then determine the value of the element at a given position,For each array, perform a number of right circular rotations and return the values of the elements at the given indices.">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,John Watson knows of an operation called a right circular rotation on an array of integers, One rotation operation moves the last array element to the first position and shifts all remaining elements right one, To test Sherlock's abilities,">
     <meta charset="utf-8">
     <title>Circular Array Rotation</title>
     <link rel="stylesheet" href="common.css">
