--- a/Climbing the Leaderboard.html
+++ b/Climbing the Leaderboard.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank solutions,Climbing the Leaderboard,An arcade game player wants to climb to the top of the leaderboard and track their ranking, The game uses Dense Ranking, so its leaderboard works like this:The player with the highest score is ranked number  on the leaderboard,Players who have equal scores receive the same ranking number, and the next player(s) receive the immediately following ranking number. ,">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,Climbing the Leaderboard,An arcade game player wants to climb to the top of the leaderboard and track their ranking, The game uses Dense Ranking, so its leaderboard works like this:The player with the highest score is ranked number  on the leaderboard,Players who have equal scores receive the same ranking number">
     <meta charset="utf-8">
     <title>Climbing the Leaderboard</title>
     <link rel="stylesheet" href="common.css">
