--- a/Counting Valleys.html
+++ b/Counting Valleys.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Counting Valleys,the, ,An avid hiker keeps meticulous records of their hikes, During the last hike that took exactly  steps, for every step it was noted if it was an uphill, , or a downhill,  step, Hikes always start and end at sea level, and each step up or down represents a  unit change in altitude, We define the following terms,A mountain is a sequence of consecutive steps above sea level, starting with a step up from sea level and ending with a step down to sea level,A valley is a sequence of consecutive steps below sea level, starting with a step down from sea level and ending with a step up to sea level,Given the sequence of up and down steps during a hike, find and print the number of valleys walked through.">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,An avid hiker keeps meticulous records of their hikes, During the last hike that took exactly  steps, for every step it was noted if it was an uphill, , or a downhill,  step, Hikes always start and end at sea level, and each step up or down represents a  unit change in altitude, We define the following terms,A mountain is a sequence of consecutive steps above sea level, starting with a step up from sea level and ending with a step down to sea level,A valley is a sequence of consecutive steps below sea level, starting with a step down from sea level and ending with">
     <meta charset="utf-8">
     <title>Counting Valleys</title>
     <link rel="stylesheet" href="common.css">
