Update Cut the Sticks.html

--- a/Cut the Sticks.html
+++ b/Cut the Sticks.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,the, ,Cut the Sticks,You are given a number of sticks of varying lengths, You will iteratively cut the sticks into smaller sticks, discarding the shortest pieces until there are none left, At each iteration you will determine the length of the shortest stick remaining, cut that length from each of the longer sticks and then discard all the pieces of that shortest length, When all the remaining sticks are the same length, they cannot be shortened so discard them,Given the lengths of  sticks, print the number of sticks that are left before each iteration until there are none left.">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,You are given a number of sticks of varying lengths, You will iteratively cut the sticks into smaller sticks, discarding the shortest pieces until there are none left, At each iteration you will determine the length of the shortest stick remaining">
     <meta charset="utf-8">
     <title>Cut the Sticks</title>
     <link rel="stylesheet" href="common.css">
