--- a/Designer PDF Viewer.html
+++ b/Designer PDF Viewer.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Designer PDF Viewer,When a contiguous block of text is selected in a PDF viewer, the selection is highlighted with a blue rectangle., ,In this PDF viewer, each word is highlighted independently. For example:,PDF-highighting.png,There is a list of  character heights aligned by index to their letters. For example, 'a' is at index  and 'z' is at index ., ,There will also be a string. Using the letter heights given, determine the area of the rectangle highlight in  assuming all letters are  wide.,Example">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,When a contiguous block of text is selected in a PDF viewer, the selection is highlighted with a blue rectangle., ,In this PDF viewer, each word is highlighted independently. For example:,PDF-highighting.png,There is a list of  character heights aligned by index to their letters. For example, 'a' is at index  and 'z' is at index .,">
     <meta charset="utf-8">
     <title>Designer PDF Viewer</title>
     <link rel="stylesheet" href="common.css">
