--- a/Diagonal Diffrence.html
+++ b/Diagonal Diffrence.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,Given a square matrix, calculate the absolute difference between the sums of its diagonals.,For example, the square matrix  is shown below:,1 2 34 5 69 8 9  ,The left-to-right diagonal = . The right to left diagonal = . Their absolute difference is, ,Function description,Complete the  function in the editor below.">
 	  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,calculate the absolute difference between the sums of its diagonals.,For example, the square matrix  is shown below:,1 2 34 5 69 8 9  ,The left-to-right diagonal = . Th">
     <meta charset="utf-8">
     <title>Diagonal Difference </title>
     <link rel="stylesheet" href="common.css">
