--- a/Divisible Sum Pairs.html
+++ b/Divisible Sum Pairs.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Divisible Sum Pairs,Given an array of integers and a positive integer , determine the number of  pairs where  and  +  is divisible by .,ExampleThree pairs meet the criteria:  and .,Function Description,Complete the divisibleSumPairs function in the editor below.,divisibleSumPairs has the following parameter(s):,int n: the length of array ,int ar[n]: an array of integers,int k: the integer divisor">
 	  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,Given an array of integers and a positive integer , determine the number of  pairs where  and  +  is divisible by .,ExampleThree pairs meet the criteria:  and .,Function Description,Complete the divisibleSumPairs function in the ">
     <meta charset="utf-8">
     <title>Divisible Sum Pairs</title>
     <link rel="stylesheet" href="common.css">
