--- a/Drawing Book.html
+++ b/Drawing Book.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Drawing Book,A teacher asks the class to open their books to a page number. ,A student can either start turning pages from the front of the book or from the back of the book. ,They always turn pages one at a time. When they open the book, page  is always on the right side:,image,When they flip page , they see pages  and . Each page except the last page will always be printed on both sides. The last page may only be printed on the front, given the length of the book. If the book is  pages long, and a student wants to turn to page , what is the minimum number of pages to turn? They can start at the beginning or the end of the book.,Given  and , find and print the minimum number of pages that must be turned in order to arrive at page ">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,A teacher asks the class to open their books to a page number. ,A student can either start turning pages from the front of the book or from the back of the book. ,They always turn pages one at a time. When they open the book, page  is always on the right side:,image,When they flip page , they see pages  and . Each page except the last page wi">
     <meta charset="utf-8">
     <title>Drawing Book</title>
     <link rel="stylesheet" href="common.css">
