--- a/Electronics Shop.html
+++ b/Electronics Shop.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Electronics Shop,A person wants to determine the most expensive computer keyboard and USB drive that can be purchased with a give budget. ,Given price lists for keyboards and USB drives and a budget, find the cost to buy them. If it is not possible to buy both items, return .,Example,The person can buy a , or a . Choose the latter as the more expensive option and return .">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,A person wants to determine the most expensive computer keyboard and USB drive that can be purchased with a give budget. ,Given price lists for ke">
     <meta charset="utf-8">
     <title>Electronics Shop</title>
     <link rel="stylesheet" href="common.css">
